--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -5,23 +5,12 @@
 
 {% block head %}
 {{ super() }}
-  <style media="screen">
-    body {
-      background-color: #f5f5f5;
-    }
-  </style>
 {% endblock %}
 
 {% block content %}
-<div class="login">
-  <div class="container">
-    <div class="box">
-      <div class="login-box">
-          <h1>Change Password</h1>
-          {{ wtf.quick_form(form) }}
-      </div>
-    </div>
-  </div>
+<div class="container page-body">
+  <h1>Change Password</h1>
+  <hr>
+  {{ wtf.quick_form(form) }}
 </div>
-
 {% endblock %}
