Changed all of the primary submit buttons to btw-primary classes. (Grant helped!)

--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -23,7 +23,7 @@
     {{ wtf.form_field(form.starts, placeholder="i.e. January" )}}
     {{ wtf.form_field(form.ends, placeholder="i.e. March" ) }}
     <hr>
-    {{ wtf.form_field(form.submit)}}
+    {{ form.submit(class_='btn btn-primary')}}
 
   </form>
 
