--- a/app/templates/crop_list.html
+++ b/app/templates/crop_list.html
@@ -8,47 +8,50 @@
   <div class="container page-body crop-list">
       {% if current_user %}
         <div class="header">
-          <h1>Crop List <a href="{{ url_for('.add_product', id=current_user.id) }}"><span class="glyphicon glyphicon-plus pull-right" aria-hidden="true"></span></a></h1>
-        </div><hr>
-        <ul class="products">
-          <div class="available-now">
-            <h3>Available Now</h3><hr>
-            {% for product in products %}
-              {% if product.status | int == 1 %}
-                <li>
-                  <span class="title">{{product.name}}</span>
-                  <span class="price">{{ product.price }}</span>
-                  <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right" style="color: cornflowerblue;"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-                </li>
-              {% endif%}
-            {% endfor %}
-          </div>
+          <h1>Crop List <a class="add-crop-button" href="{{ url_for('.add_product', id=current_user.id) }}"><span class="glyphicon glyphicon-plus pull-right" aria-hidden="true"></span></a></h1>
+  </div><hr>
+    
+  <ul class="products">
+    <div class="available-now">
+      <h3>Available Now</h3><hr>
+      {% for product in products %}
+        {% if product.status | int == 1 %}
+          <li>
+            <p><span class="title">{{product.name}}</span>
+            <span class="price">{{ product.price }}</span>
+            <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right edit-crop-button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></p>
+          </li>
+        {% endif%}
+      {% endfor %}
+    </div>
+          
+  <br/><br/>
+  <div class="coming-soon">
+  <h3>Coming Soon</h3><hr>
+  {% for product in products %}
+    {% if product.status | int == 2 %}
+      <li>
+        <span class="title">{{product.name}}</span>
+        <span class="price">{{ product.price }}</span>
+        <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right edit-crop-button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+      </li>
+    {% endif%}
+  {% endfor %}
+  </div>
 
-          <div class="coming-soon">
-            <h3>Coming Soon</h3><hr>
-            {% for product in products %}
-              {% if product.status | int == 2 %}
-                <li>
-                  <span class="title">{{product.name}}</span>
-                  <span class="price">{{ product.price }}</span>
-                  <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right" style="color: cornflowerblue;"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-                </li>
-              {% endif%}
-            {% endfor %}
-          </div>
-
-          <div class="coming-soon">
-            <h3>Hidden</h3><hr>
-            {% for product in products %}
-              {% if product.status | int == 3 %}
-                <li>
-                  <span class="title">{{product.name}}</span>
-                  <span class="price">{{ product.price }}</span>
-                  <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right" style="color: cornflowerblue;"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span></a>
-                </li>
-              {% endif%}
-            {% endfor %}
-          </div>
+  <br/><br/>
+  <div class="coming-soon">
+    <h3>Hidden</h3><hr>
+    {% for product in products %}
+      {% if product.status | int == 3 %}
+        <li>
+          <span class="title">{{product.name}}</span>
+          <span class="price">{{ product.price }}</span>
+          <a href="{{ url_for('.edit_product', id=product.id) }}" class="pull-right edit-crop-button"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+        </li>
+      {% endif%}
+    {% endfor %}
+  </div>
 
         </ul>
       {% endif %}
