--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -3,11 +3,11 @@
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: 'Open Sans', sans-serif;}
 
-p {font-size: 16px;}
+p {
+  font-size: 16px;}
 
 .navbar-inverse .navbar-brand {
-    color: #fff;
-}
+  color: #fff;}
 
 h3 {
   font-weight: bold;
@@ -18,9 +18,9 @@ h4 {
   font-size: 13px;}
 
 .border-bottom {
-    border-bottom: 1px solid #eee;
-    padding-bottom: 20px;
-    margin-bottom: 20px;}
+  border-bottom: 1px solid #eee;
+  padding-bottom: 20px;
+  margin-bottom: 20px;}
 
 .form-control {
   height: 40px;
@@ -41,11 +41,9 @@ label {
 
 .btn-primary {
   background-color: blue;
-border-color: blue;
+  border-color: blue;
   padding: 10px 20px;
   font-size: 16px;}
-
-.btn {}
 
 h5 {
   font-weight: bold;
@@ -57,7 +55,7 @@ h5 {
 
 .settings-group:first-of-type {
   border-top: 0px;
-padding: 0px;}
+  padding: 0px;}
 
 .unfilled {
   color: #aaa;
@@ -65,163 +63,16 @@ padding: 0px;}
   font-size: 13px;}
 
 .page-body {
-    padding-bottom: 20px;
-    margin-top: 30px;}
-/*h1 {
-  font-size: 36px;
-  margin-bottom: 0px;
-  font-weight: bold;
-  margin-top: 0px;}
-
-h2 {
-  font-size: 30px;
-  font-weight:bold;}
-
-h3 {
-  font-size: 21px;
-  font-weight: bold;}
-
-h4 {
-  font-size: 14px;
-  margin-top: 4px;
-  line-height: 1.5em;}
-
-table {
-  margin-bottom: 40px;
-  width: 100%;}
-
-tr {
-  border-bottom: 1px solid #eee;}
-
-td {
-  padding: 20px 0px;}*/
-
-/*end of base styles*/
-
-/*header styles*/
-/*.navbar {
-  background-color: darkgray;
-  border-bottom: white solid 1px;
-  color: white;
-}
-
-.navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav > li > a{
-  color: white;
-}
-
-.navbar-inverse .navbar-toggle {
-  border-color: silver;
-}
-
-.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
-  background-color: silver;
-}
-
-.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
-  border-color: silver;
-}*/
-
-/*end of header styles*/
-
-/*login styles*/
-/*.login .box, .register .box, .edit-profile .box, .add-product .box {
-  margin-top: 20px;
-}
-.login-box, .new-register, .register-box, .edit-profile-box, .add-product-box{
-  background-color: white;
-  width: 33%;
-  margin: 0 auto;
-  padding: 20px;
-  border-radius: 6px;
-}
-
-.login .btn, .edit-profile .btn, .register .btn, .add-product .btn {
-  background-color: green;
-  color: white;
-  font-size: 1.4em;
-  width: 100%;
-  height: 45px;
-  border-radius: 4px;
-}
-
-.edit-profile .btn, .add-product .btn {
-  background-color: #0000ff;
-}*/
-
-/*end login styles*/
-
-/*content styles*/
-
-/*.disclaimer {
-  font-size: 13px;
-}
-
-.sign-up {
-  background-color: #f5F5F5;
-  padding: 30px 0px 45px;
-  margin-top: 50px;
-}
-
-.sign-up h3 {
-  text-align: left;
-  margin-top: 0px;
-}
-
-.sign-up p {
-  font-size: 15px;
-  opacity: .7;
-}
-
-.sign-up .form-control {
-  height: 47px;
-  font-size: 18px;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: blue;
-    border-color: blue;
-}
-
-.btn-primary:hover {
-    color: #fff;
-    opacity: .5;
-    background-color: blue;
-    border-color: blue;
-}
-
-.header-info{
-    padding-top: 35px;
-    margin-bottom: 30px;
-    padding-bottom: 30px;
-    background-color: #f5f5f5;
-}
-
-.subscribe {
-    font-size: 18px;
-    padding: 10px 30px;
-}
-
-.participating-farmers {
-    padding-left: 40px;
-}
-
-.list-users ul{
-  padding: 0;
-}
-.list-users li {
-  list-style-type: none;
-}*/
+  padding-bottom: 20px;
+  margin-top: 30px;}
 
 .crop-list ul{
-  padding: 0px;
-}
+  padding: 0px;}
 
 .crop-list li{
   list-style-type: none;
   border-bottom: 1px solid #f6f6f6;
-  margin-bottom: 15px;
-}
+  margin-bottom: 15px;}
 
 .crop-list .glyphicon-plus{
   background-color: limegreen;
@@ -232,113 +83,35 @@ td {
   padding-top: 9px;
   padding-left: 2px;
   border-radius: 50px;
-  font-size: 0.8em;
-}
+  font-size: 0.8em;}
+
 .crop-list  .available-now .season {
   color: MediumSeaGreen;
-  opacity: 0.6;
-}
+  opacity: 0.6;}
 
 .crop-list .price {
-  color: darkgray;
-}
+  color: darkgray;}
 
 .crop-list .available-btn {
-  padding: 0px 10px;
-}
+  padding: 0px 10px;}
 
 .price {
-  text-align: right;
-}
+  text-align: right;}
+
 .coming-soon .price, .coming-soon .title, .coming-soon .season{
-  opacity: .5;
-}
+  opacity: .5;}
 
 .add-product-box div.delete-box {
   height: 50px;
   text-align: center;
-  padding-top: 15px;
-}
+  padding-top: 15px;}
 
 .add-product-box div.delete-box a {
-  color: tomato;
-}
+  color: tomato;}
 
 .edit-crop-button {
-color: cornflowerblue;
-font-size: 20px;}
+  color: cornflowerblue;
+  font-size: 20px;}
 
 .add-crop-button {
-font-size: 25px;}
-*/
-
-/*end of content styles*/
-
-
-/*footer styles*/
-
-/*end of footer styles*/
-
-/*@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 568px) {
-  .login-box, .new-register, .register-box, .edit-profile-box, .add-product-box {
-    width: 100%;
-  }
-
-  .login #submit {
-    background-color: green;
-    color: white;
-    font-size: 1.4em;
-    width: 100%;
-    height: 55px;
-    border-radius: 4px;
-  }
-
-  .login input {
-    height: 50px;
-  }
-
-  .radio label, .checkbox label {
-    line-height: 27px;
-    padding-left: 5px;
-  }
-
-  .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
-  }
-
-
-  .new-register {
-    padding: 18px;
-  }
-
-  .register #submit, .add-product #submit {
-    background-color: green;
-    color: white;
-    font-size: 1.4em;
-    width: 100%;
-    height: 55px;
-    border-radius: 4px;
-  }
-
-  .edit-product #submit {
-    background-color: #0000ff;
-  }
-
-  .register input, .add-product input {
-    height: 50px;
-    background-color: #F5F9FD;
-  }
-
-  .list-users .row {
-    padding: 5px;
-  }
-
-  .login .box, .register .box, .edit-profile .box, .add-product .box {
-    margin-top: -10px;
-  }
-
-}*/
-
+  font-size: 25px;}
