--- a/app/templates/edit_product.html
+++ b/app/templates/edit_product.html
@@ -21,7 +21,8 @@
       {{ wtf.form_field(form.ends, placeholder=product.ends ) }}
       <hr>
       {{ form.submit(class_='btn btn-primary')}}
-      <div class="delete-box"><a href="{{ url_for('.delete_product', id=product.id) }}" class="delete">Delete</a></div>  
+      <br/><br/>
+      <div class="delete-box"><p><a href="{{ url_for('.delete_product', id=product.id) }}" class="delete">Delete</a></p></div>  
     </form>
   {% endif %}
 </div>
