--- a/app/templates/add_product.html
+++ b/app/templates/add_product.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baseAdmin.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Add a Crop | Farm Stand{% endblock %}
