--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,52 +4,11 @@
 
 {% block head %}
 
-
-
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<!--<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">-->
-<link rel="stylesheet" href="{{url_for('static', filename='css/admin.css')}}"><link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800' rel='stylesheet' type='text/css'>
-
-{% endblock %}
-
-{% block navbar %}
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">Farm Stand</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                {% if current_user.is_authenticated() %}
-                <li><a href="{{ url_for('main.user', id=current_user.id)}}">Profile</a></li>
-                {% endif %}
-                {% if current_user.is_authenticated() and current_user.role_id == 1 %}
-                <li><a href="{{ url_for('main.crop_list', id=current_user.id)}}">Crop List</a></li>
-                {% endif %}
-                {% if current_user.is_authenticated() and current_user.role_id == 3 %}
-                <li><a href="{{ url_for('main.crop_list', id=current_user.id)}}">Crop List</a></li>
-                <li><a href="{{ url_for('main.list_users', id=current_user.id)}}">Admin</a></li>
-                {% endif %}
-
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {% if current_user.is_authenticated() %}
-                <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
-                {% else %}
-                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-</div><br><br>
+<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,800' rel='stylesheet' type='text/css'>
 {% endblock %}
 
 {% block messages%}
