--- a/app/templates/edit_product.html
+++ b/app/templates/edit_product.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baseAdmin.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 {% block title %}Farm Stand - Edit Profile{% endblock %}
 {% block head %}
