--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "baseAdmin.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}Edit Your Profile | Farm Stand{% endblock %}
