--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,7 @@
 /*base styles*/
 
-body {
-  font-family: 'Montserrat', sans-serif;
+body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6{
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;}
 
 h1 {
@@ -205,6 +205,11 @@ strong {
   color: tomato;
 }
 
+.log-in {background-color: black;
+    color: grey;
+    font-size: 14px;
+    padding: 20px;}
+
 /*end of content styles*/
 
 
@@ -215,62 +220,5 @@ strong {
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 568px) {
-  .login-box, .new-register, .register-box, .edit-profile-box, .add-product-box {
-    width: 100%;
-  }
-
-  .login #submit {
-    background-color: green;
-    color: white;
-    font-size: 1.4em;
-    width: 100%;
-    height: 55px;
-    border-radius: 4px;
-  }
-
-  .login input {
-    height: 50px;
-  }
-
-  .radio label, .checkbox label {
-    line-height: 27px;
-    padding-left: 5px;
-  }
-
-  .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
-  }
-
-
-  .new-register {
-    padding: 18px;
-  }
-
-  .register #submit, .add-product #submit {
-    background-color: green;
-    color: white;
-    font-size: 1.4em;
-    width: 100%;
-    height: 55px;
-    border-radius: 4px;
-  }
-
-  .edit-product #submit {
-    background-color: #0000ff;
-  }
-
-  .register input, .add-product input {
-    height: 50px;
-    background-color: #F5F9FD;
-  }
-
-  .list-users .row {
-    padding: 5px;
-  }
-
-  .login .box, .register .box, .edit-profile .box, .add-product .box {
-    margin-top: -10px;
-  }
 
 }
