--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,16 +19,16 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <h1>West Sacramento Urban Farm</h1>
+        <h1>The West Sacramento Farm Stand</h1>
         <h4>
           317 5th Street, West Sacramento, CA 95605<br />
           Tuesdays and Fridays, 3pm &ndash; 7pm
         </h4>
       </div>
 
-      <div class="col-md-3">
+      <!--<div class="col-md-3">
         <button type="button" class="btn btn-primary subscribe">Subscribe</button>
-      </div>
+      </div>-->
     </div>
   </div>
 </div>
@@ -110,4 +110,7 @@
   </div>
 </div>
 
+<div class="log-in">
+  Farmers <a href="{{ url_for('auth.login') }}">log in here</a>.
+</div>
 {% endblock %}
