--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -30,7 +30,7 @@
   <p><strong>Website Link</strong>&nbsp;&nbsp;&nbsp;<a href="{{ user.url }}">{{ user.url }}</a></p>
   <hr>
   {% if user == current_user %}
-    <a class="btn btn-primary" href="{{url_for('.edit_profile')}}">Edit Profile</a>
+    <a class="btn btn-primary" href="{{url_for('.edit_profile', id=current_user.id)}}">Edit Profile</a>
   {% endif %}
 </div>
 {% endblock %}
