changed the farm_name in the index for the farmer name

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -78,8 +78,8 @@
     <h3>Participating Farms</h3>
       <ul>
         {% for farmer in farmers %}
-          {% if farmer.farm_name %}
-            <li><a href="{{ url_for('main.profile', id=farmer.id) }}">{{ farmer.farm_name }}</a></li>
+          {% if farmer.name %}
+            <li><a href="{{ url_for('main.profile', id=farmer.id) }}">{{ farmer.name }}</a></li>
           {% endif %}
         {% endfor %}
       </ul>
