--- a/app/templates/subscribers.html
+++ b/app/templates/subscribers.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 
-<div class="list-subscribers">
+<div class="list-users">
   <div class="container">
     <div class="row">
       <h3>List of subscribers</h3>
@@ -23,7 +23,6 @@
           <td>{{subscriber.id}}</td>
           <td>{{subscriber.name}}</td>
           <td>{{subscriber.phone}}</td>
-          <td><a href="{{ url_for('.delete_subscriber', id=subscriber.id) }}" class="delete"> delete </a></td>
         </tr>
         {% endfor %}
       </table>
