--- a/app/templates/subscribers.html
+++ b/app/templates/subscribers.html
@@ -23,6 +23,7 @@
           <td>{{subscriber.id}}</td>
           <td>{{subscriber.name}}</td>
           <td>{{subscriber.phone}}</td>
+          <td><a href="{{ url_for('.delete_subscriber', id=subscriber.id) }}" class="delete"> delete </a></td>
         </tr>
         {% endfor %}
       </table>
