added forgot password code

--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -10,15 +10,9 @@
 {% block content %}
 <div class="container page-body">
 
-  {% if current_user.is_authenticated() %}
-  <h1>Change Password</h1>
+  <h1>Change Password {{ user.email }}</h1>
   <hr>
     {{ wtf.quick_form(form) }}
-  {% else %}
-  <h1>Go to your email!</h1>
-    <p>
-      You will receive a notification with a link to create a new passord.
-    </p>
-  {% endif %}
+
 </div>
 {% endblock %}
