--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,18 +10,19 @@
 <div class="container page-body">
   <h1>Login</h1>
   <hr>
-  
+
   {% for message in get_flashed_messages() %}
   <div class="alert alert-danger">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
       {{ message }}
   </div>
 {% endfor %}
-  
+
   {{ wtf.quick_form(form) }}
   <br/>
   <div class="new-register">
-  New user? <a href="{{ url_for('auth.register') }}">Sign up</a>.
+  New user? <a href="{{ url_for('auth.register') }}">Sign up</a>.<br>
+  <a href="{{ url_for('auth.forgot_password') }}">Forgot password? </a>
   </div>
 </div>
 
