added some text changes

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <h1>The West Sacramento Farm Stand</h1>
+        <h1>West Sacramento Urban Farmers</h1>
         <h4>
           317 5th Street, West Sacramento, CA 95605<br />
           Tuesdays and Fridays, 3pm &ndash; 7pm
