--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="box">
       <div class="edit-profile-box">
-          <h1>Fulano Profile</h1>
+          <h1>Farmer Profile</h1>
           <ul>
             <li>{{ farmer.name }}</li>
             <li>From <a href="http://maps.google.com/?q={{ farmer.location }}"> {{ farmer.location }}</a></li>
